--- a/Resources/Teach-Me-Quantum/Week 5 - Quantum Algorithms/exercises/w5_01_s.ipynb
+++ b/Resources/Teach-Me-Quantum/Week 5 - Quantum Algorithms/exercises/w5_01_s.ipynb
@@ -209,7 +209,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def new_circuit(size):\n",
@@ -274,7 +278,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def quantum_oracle_4(qr, cr, circuit):\n",
@@ -674,9 +682,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
